--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" data-page="files-english">
   <head>
+    <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
+
+    <!-- Description of the portfolio for search engines -->
     <meta
       name="description"
       content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Contact her for collaborations."
     />
-    <!-- <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    /> -->
+
+    <!-- Viewport settings for responsive design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Keywords for search engine optimization -->
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
+
+    <!-- Meta tag for color scheme preferences -->
     <meta name="color-scheme" content="light only" />
 
+    <!-- Author of the document -->
     <meta name="author" content="Kathrin Peled Draculady" />
+
+    <!-- Robots meta tag to control indexing -->
     <meta name="robots" content="index, follow" />
-    <!-- OpenGraph Meta Tags for Files Page -->
+
+    <!-- OpenGraph Meta Tags for sharing on social media -->
     <meta property="og:title" content="Files by Kathrin Peled" />
     <meta
       property="og:description"
@@ -35,7 +43,8 @@
       content="https://draculady.de/Pages/files-english.html"
     />
     <meta property="og:type" content="website" />
-    <!-- Alternate Language Links -->
+
+    <!-- Alternate Language Links for multilingual support -->
     <link
       rel="alternate"
       href="https://draculady.de/Pages/files-english.html"
@@ -51,18 +60,24 @@
       href="https://draculady.de/Pages/files-english.html"
       hreflang="x-default"
     />
+
+    <!-- Preconnect to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Canonical link to prevent duplicate content issues -->
     <link
       rel="canonical"
       href="https://draculady.de/Pages/files-english.html"
     />
 
+    <!-- Link to Google Fonts stylesheets -->
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
 
+    <!-- Preload Font Awesome styles -->
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -71,7 +86,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <noscript>
+      <!-- Fallback for Font Awesome if JavaScript is disabled -->
       <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -81,32 +98,43 @@
       />
     </noscript>
 
+    <!-- Preload Boxicons styles -->
     <link
       rel="preload"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       as="style"
       onload="this.rel='stylesheet'"
     />
+
     <noscript>
+      <!-- Fallback for Boxicons if JavaScript is disabled -->
       <link
         rel="stylesheet"
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
+
+    <!-- Preload Boxicons script -->
     <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
     ></script>
+
+    <!-- Link to Boxicons styles -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
     <!-- Link to the Schema.js file -->
     <script src="../Scripts/schema.js" defer></script>
+
+    <!-- Preload and link to the main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
-    <!-- Google tag (gtag.js) -->
+
+    <!-- Google Tag Manager for tracking -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
@@ -120,14 +148,19 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
+
+    <!-- Title of the page -->
     <title id="files-english">Kathrin Peled - Files</title>
+
+    <!-- Favicon links -->
+    <link rel="icon" href="../Icons/Draculady-icon.webp" type="image/webp" />
     <link
       rel="icon"
-      href="../Icons/Draculady-icon.webp"
+      href="https://draculady.de/Icons/Draculady-icon.webp"
       type="image/webp"
     />
-    <link rel="icon" href="https://draculady.de/Icons/Draculady-icon.webp" type="image/webp" />
-    <!-- Apple Touch Icon -->
+
+    <!-- Apple Touch Icon for mobile devices -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
   <body>
@@ -212,7 +245,11 @@
         </div>
       </div>
     </header>
-    <main class="main-files-english" role="main" aria-label="Main files english section">
+    <main
+      class="main-files-english"
+      role="main"
+      aria-label="Main files english section"
+    >
       <section class="download-files" aria-labelledby="download-files-title">
         <div class="my-files">
           <div class="container">
@@ -328,10 +365,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <a
-            href="./sitemap.html"
-            target="_blank"
-            aria-label="Website's Map"
+          <a href="./sitemap.html" target="_blank" aria-label="Website's Map"
             ><img
               src="../Icons/Draculady-logo.webp"
               loading="lazy"
