--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="de" data-page="files-german">
   <head>
+    <!-- Character encoding declaration -->
     <meta charset="UTF-8" />
+
+    <!-- Page description for SEO and social media -->
     <meta
       name="description"
       content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
     />
-    <!-- <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    /> -->
+
+    <!-- Responsive design settings -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Keywords for SEO -->
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
+
     <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
     <meta name="color-scheme" content="light only" />
 
+    <!-- Author of the document -->
     <meta name="author" content="Kathrin Peled Draculady" />
+
+    <!-- Search engine indexing instructions -->
     <meta name="robots" content="index, follow" />
+
     <!-- OpenGraph Meta Tags for Files Page (German) -->
     <meta property="og:title" content="Dateien von Kathrin Peled" />
     <meta
@@ -35,6 +43,8 @@
       content="https://draculady.de/Pages/files-german.html"
     />
     <meta property="og:type" content="website" />
+
+    <!-- Alternate language links for multilingual support -->
     <link
       rel="alternate"
       href="https://draculady.de/Pages/files-english.html"
@@ -50,15 +60,21 @@
       href="https://draculady.de/Pages/files-english.html"
       hreflang="x-default"
     />
+
+    <!-- Canonical link for SEO -->
     <link rel="canonical" href="https://draculady.de/Pages/files-german.html" />
 
+    <!-- Preconnect to Google Fonts for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Link to Google Fonts stylesheet -->
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
 
+    <!-- Preload Font Awesome stylesheet for better performance -->
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -67,6 +83,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- Fallback for users with JavaScript disabled -->
     <noscript>
       <link
         rel="stylesheet"
@@ -77,30 +95,44 @@
       />
     </noscript>
 
+    <!-- Preload Boxicons stylesheet -->
     <link
       rel="preload"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       as="style"
       onload="this.rel='stylesheet'"
     />
+
+    <!-- Fallback for users with JavaScript disabled -->
     <noscript>
       <link
         rel="stylesheet"
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
+
+    <!-- Preload Boxicons JavaScript -->
     <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
+
+    <!-- Load Boxicons JavaScript asynchronously -->
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
     ></script>
+
+    <!-- Link to Boxicons stylesheet -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
+    <!-- Preload custom stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
+
+    <!-- Link to custom stylesheet -->
     <link rel="stylesheet" href="../Styles/style.css" />
-    <!-- Google tag (gtag.js) -->
+
+    <!-- Google Analytics tracking code -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
@@ -114,18 +146,25 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
+
     <!-- Link to the Schema.js file -->
     <script src="../Scripts/schema.js" defer></script>
+
+    <!-- Title of the page -->
     <title id="files-german">Kathrin Peled - Dateien</title>
+
+    <!-- Favicon for the website -->
+    <link rel="icon" href="../Icons/Draculady-icon.webp" type="image/webp" />
     <link
       rel="icon"
-      href="../Icons/Draculady-icon.webp"
+      href="https://draculady.de/Icons/Draculady-icon.webp"
       type="image/webp"
     />
-    <link rel="icon" href="https://draculady.de/Icons/Draculady-icon.webp" type="image/webp" />
+
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
+
   <body>
     <header>
       <div class="container">
@@ -335,10 +374,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - Mein erstes Portfolio</p>
         <div class="logo">
-          <a
-            href="./sitemap.html"
-            target="_blank"
-            aria-label="Website's Map"
+          <a href="./sitemap.html" target="_blank" aria-label="Website's Map"
             ><img
               src="../Icons/Draculady-logo.webp"
               loading="lazy"
