--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="de" data-page="resume-german">
   <head>
+    <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
+
+    <!-- Description of the page for search engines and social media -->
     <meta
       name="description"
       content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
     />
-    <!-- <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    /> -->
+
+    <!-- Viewport settings for responsive design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Keywords for SEO -->
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
+    <!-- Meta tag for color scheme preference -->
     <meta name="color-scheme" content="light only" />
 
+    <!-- Author of the document -->
     <meta name="author" content="Kathrin Peled Draculady" />
+
+    <!-- Instructions for web crawlers -->
     <meta name="robots" content="index, follow" />
+
     <!-- OpenGraph Meta Tags for Resume Page (German) -->
     <meta property="og:title" content="Kathrin Peled - Lebenslauf" />
     <meta
@@ -36,6 +43,7 @@
     />
     <meta property="og:type" content="website" />
 
+    <!-- Alternate language links for SEO and localization -->
     <link
       rel="alternate"
       href="https://draculady.de/Pages/resume-english.html"
@@ -51,18 +59,24 @@
       href="https://draculady.de/Pages/resume-english.html"
       hreflang="x-default"
     />
+
+    <!-- Preconnect to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Canonical link to avoid duplicate content issues -->
     <link
       rel="canonical"
       href="https://draculady.de/Pages/resume-german.html"
     />
 
+    <!-- Google Fonts stylesheet -->
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
 
+    <!-- Preload Font Awesome CSS -->
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -72,6 +86,7 @@
       referrerpolicy="no-referrer"
     />
     <noscript>
+      <!-- Fallback for users with JavaScript disabled -->
       <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -81,6 +96,7 @@
       />
     </noscript>
 
+    <!-- Preload Boxicons CSS -->
     <link
       rel="preload"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -88,20 +104,29 @@
       onload="this.rel='stylesheet'"
     />
     <noscript>
+      <!-- Fallback for Boxicons CSS -->
       <link
         rel="stylesheet"
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
+
+    <!-- Preload Boxicons JS -->
     <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
     ></script>
+
+    <!-- Preload main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
+
+    <!-- Preload resume-specific stylesheet -->
     <link rel="preload" href="../Styles/style_resume.css" as="style" />
     <link rel="stylesheet" href="../Styles/style_resume.css" />
+
+    <!-- Google Tag Manager for analytics -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
@@ -115,18 +140,25 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <!-- Link to the Schema.js file -->
+
+    <!-- Link to the Schema.js file for structured data -->
     <script src="../Scripts/schema.js" defer></script>
+
+    <!-- Title of the document -->
     <title id="resume-german">Kathrin Peled - Lebenslauf</title>
+
+    <!-- Favicon for the website -->
+    <link rel="icon" href="../Icons/Draculady-icon.webp" type="image/webp" />
     <link
       rel="icon"
-      href="../Icons/Draculady-icon.webp"
+      href="https://draculady.de/Icons/Draculady-icon.webp"
       type="image/webp"
     />
-    <link rel="icon" href="https://draculady.de/Icons/Draculady-icon.webp" type="image/webp" />
+
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
+
   <body>
     <header>
       <div class="container">
@@ -215,7 +247,11 @@
         </div>
       </div>
     </header>
-    <main class="main-resume-german" role="main" aria-label="Main Resume german Section">
+    <main
+      class="main-resume-german"
+      role="main"
+      aria-label="Main Resume german Section"
+    >
       <div class="wrapper">
         <div class="cover cover-left" aria-hidden="true"></div>
         <div class="cover cover-right" aria-hidden="true"></div>
@@ -895,10 +931,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <a
-            href="./sitemap.html"
-            target="_blank"
-            aria-label="Website's Map"
+          <a href="./sitemap.html" target="_blank" aria-label="Website's Map"
             ><img
               src="../Icons/Draculady-logo.webp"
               loading="lazy"
