--- a/index-german.html
+++ b/index-german.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="de" data-page="index-german">
   <head>
+    <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
+
+    <!-- Description for the portfolio page -->
     <meta
       name="description"
       content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
     />
-    <!-- <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    /> -->
+
+    <!-- Viewport settings for responsive design (commented out for maximum scale) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Keywords for search engine optimization -->
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
+
+    <!-- Meta tag for the German homepage URL for social media sharing -->
     <meta property="og:url" content="https://draculady.de/index-german.html" />
 
+    <!-- Color scheme preference for the page -->
     <meta name="color-scheme" content="light only" />
 
+    <!-- Author of the document -->
     <meta name="author" content="Kathrin Peled Draclady" />
+
+    <!-- Instructions for web crawlers -->
     <meta name="robots" content="index, follow" />
+
     <!-- OpenGraph Meta Tags for German Homepage -->
     <meta
       property="og:title"
@@ -37,6 +46,8 @@
     />
     <meta property="og:url" content="https://draculady.de/index-german.html" />
     <meta property="og:type" content="website" />
+
+    <!-- Alternate links for different languages -->
     <link
       rel="alternate"
       href="https://draculady.de/index.html"
@@ -53,13 +64,17 @@
       hreflang="x-default"
     />
 
+    <!-- Preconnect for improved loading performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Link to Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
 
+    <!-- Preload Font Awesome stylesheet for faster loading -->
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -68,8 +83,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- Canonical URL for SEO -->
     <link rel="canonical" href="https://draculady.de/index-german.html" />
 
+    <!-- Fallback stylesheet for Font Awesome -->
     <noscript>
       <link
         rel="stylesheet"
@@ -80,29 +98,44 @@
       />
     </noscript>
 
+    <!-- Preload Boxicons stylesheet for faster loading -->
     <link
       rel="preload"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       as="style"
       onload="this.rel='stylesheet'"
     />
+
+    <!-- Fallback stylesheet for Boxicons -->
     <noscript>
       <link
         rel="stylesheet"
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
+
+    <!-- Preload Boxicons script -->
     <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
+
+    <!-- Boxicons script -->
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
     ></script>
+
+    <!-- Boxicons stylesheet -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
+    <!-- Preload custom stylesheet for the page -->
     <link rel="preload" href="./Styles/style.css" as="style" />
+
+    <!-- Link to custom stylesheet -->
     <link rel="stylesheet" href="./Styles/style.css" />
+
+    <!-- Google Analytics tag -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
@@ -116,16 +149,24 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <!-- Link to the Schema.js file -->
+
+    <!-- Link to the Schema.js file for structured data -->
     <script src="./Scripts/schema.js" defer></script>
+
+    <!-- Title of the document -->
     <title id="index-german">Kathrin Peleds Portfolio - Startseite</title>
+
+    <!-- Favicon for the site -->
     <link rel="icon" href="./Icons/Draculady-icon.webp" type="image/webp" />
+
+    <!-- Fallback favicon from the server -->
     <link
       rel="icon"
       href="https://draculady.de/Icons/Draculady-icon.webp"
       type="image/webp"
     />
-    <!-- Apple Touch Icon -->
+
+    <!-- Apple Touch Icon for iOS devices -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
   <body>
