--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" data-page="index-english">
   <head>
+    <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
+
+    <!-- Description of the webpage for SEO purposes -->
     <meta
       name="description"
       content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Contact her for collaborations."
     />
-    <!-- <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    /> -->
+
+    <!-- Viewport settings for responsive design (commented out maximum scale) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Keywords relevant to the webpage for SEO -->
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
+
+    <!-- Meta tag for defining the color scheme of the website (for light mode only) -->
     <meta name="color-scheme" content="light only" />
 
-    <meta name="author" content="Kathrin Peled Draculady" />
+    <!-- Author of the webpage -->
+    <meta name="author" content="Kathrin Peled Draclady" />
+
+    <!-- Robots meta tag to instruct search engines to index the page -->
     <meta name="robots" content="index, follow" />
-    <!-- OpenGraph Meta Tags for Homepage -->
+
+    <!-- OpenGraph Meta Tags for sharing on social media -->
     <meta
       property="og:title"
       content="Kathrin Peled - Web Developer Portfolio"
@@ -35,6 +43,8 @@
     />
     <meta property="og:url" content="https://draculady.de/" />
     <meta property="og:type" content="website" />
+
+    <!-- Alternate language versions of the homepage -->
     <link
       rel="alternate"
       href="https://draculady.de/index.html"
@@ -51,14 +61,20 @@
       hreflang="x-default"
     />
 
+    <!-- Preconnect to external resources for improved performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Link to Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Canonical link to the current webpage to avoid duplicate content issues -->
     <link rel="canonical" href="https://draculady.de/" />
 
+    <!-- Preload Font Awesome stylesheet -->
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -77,6 +93,7 @@
       />
     </noscript>
 
+    <!-- Preload Boxicons stylesheet -->
     <link
       rel="preload"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -89,18 +106,29 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
+
+    <!-- Preload Boxicons JavaScript -->
     <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
+
+    <!-- Boxicons script for icons -->
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
     ></script>
+
+    <!-- Link to Boxicons stylesheet again for consistency -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
+    <!-- Preload custom stylesheet -->
     <link rel="preload" href="./Styles/style.css" as="style" />
+
+    <!-- Link to custom stylesheet -->
     <link rel="stylesheet" href="./Styles/style.css" />
-    <!-- Google tag (gtag.js) -->
+
+    <!-- Google Analytics tag -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
@@ -114,17 +142,18 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <!-- Link to the Schema.js file -->
+
+    <!-- Link to the Schema.js file for structured data -->
     <script src="./Scripts/schema.js" defer></script>
+
+    <!-- Title of the webpage -->
     <title id="index-english">Kathrin Peled's Portfolio - Homepage</title>
+
+    <!-- Favicon for the webpage -->
     <link rel="icon" href="./Icons/Draculady-icon.webp" type="image/webp" />
-    <!-- Apple Touch Icon -->
+
+    <!-- Apple Touch Icon for iOS devices -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
-    <link
-      rel="icon"
-      href="https://draculady.de/Icons/Draculady-icon.webp"
-      type="image/webp"
-    />
   </head>
   <body>
     <header>
