--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" data-page="contact-english">
   <head>
+    <!-- Character encoding -->
     <meta charset="UTF-8" />
+
+    <!-- Meta description -->
     <meta
       name="description"
       content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Contact her for collaborations."
     />
-    <!-- <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    /> -->
+
+    <!-- Viewport settings for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO keywords -->
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
+
+    <!-- Color scheme preference -->
     <meta name="color-scheme" content="light only" />
 
+    <!-- Author and robot instructions -->
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
-    <!-- OpenGraph Meta Tags for Contact Page -->
+
+    <!-- OpenGraph Meta Tags for social sharing -->
     <meta property="og:title" content="Contact Kathrin Peled" />
     <meta
       property="og:description"
@@ -36,6 +42,7 @@
     />
     <meta property="og:type" content="website" />
 
+    <!-- Language versions (hreflang) -->
     <link
       rel="alternate"
       href="https://draculady.de/Pages/contact-english.html"
@@ -52,14 +59,17 @@
       hreflang="x-default"
     />
 
+    <!-- Preconnect for fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
 
+    <!-- Preloading Font Awesome and handling loading -->
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -68,11 +78,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- Canonical link for SEO -->
     <link
       rel="canonical"
       href="https://draculady.de/Pages/contact-english.html"
     />
 
+    <!-- Fallback stylesheet for Font Awesome in case JavaScript is disabled -->
     <noscript>
       <link
         rel="stylesheet"
@@ -83,30 +96,47 @@
       />
     </noscript>
 
+    <!-- Preloading Boxicons stylesheet -->
     <link
       rel="preload"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       as="style"
       onload="this.rel='stylesheet'"
     />
+
+    <!-- Fallback stylesheet for Boxicons in case JavaScript is disabled -->
     <noscript>
       <link
         rel="stylesheet"
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
+
+    <!-- Preloading Boxicons script -->
     <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
     ></script>
+
+    <!-- Boxicons stylesheet -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
+    <!-- Page title -->
+    <title id="contact-english">Kathrin Peled - contact</title>
+
+    <!-- Additional stylesheets -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
-    <!-- Google tag (gtag.js) -->
+
+    <!-- Google Analytics tag -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
@@ -120,15 +150,17 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <!-- Link to the Schema.js file -->
+
+    <!-- Schema.js script for structured data -->
     <script src="../Scripts/schema.js" defer></script>
-    <title id="contact-english">Kathrin Peled - contact</title>
+
+    <!-- Favicon and Apple Touch Icon -->
+    <link rel="icon" href="../Icons/Draculady-icon.webp" type="image/webp" />
     <link
       rel="icon"
-      href="../Icons/Draculady-icon.webp"
+      href="https://draculady.de/Icons/Draculady-icon.webp"
       type="image/webp"
     />
-    <link rel="icon" href="https://draculady.de/Icons/Draculady-icon.webp" type="image/webp" />
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
