--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="de" data-page="contact-german">
   <head>
+    <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
+
+    <!-- Description for SEO and browser previews -->
     <meta
       name="description"
       content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
     />
-    <!-- <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    /> -->
+    <!-- Viewport settings for responsive design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Keywords for search engine optimization -->
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
+
+    <!-- Meta tag for specifying the color scheme -->
     <meta name="color-scheme" content="light only" />
 
+    <!-- Author of the document -->
     <meta name="author" content="Kathrin Peled Draclady" />
+
+    <!-- Robots meta tag for search engine indexing -->
     <meta name="robots" content="index, follow" />
+
     <!-- OpenGraph Meta Tags for Contact Page (German) -->
     <meta property="og:title" content="Kontakt Kathrin Peled" />
     <meta
@@ -36,6 +43,7 @@
     />
     <meta property="og:type" content="website" />
 
+    <!-- Alternate links for multilingual support -->
     <link
       rel="alternate"
       href="https://draculady.de/Pages/contact-english.html"
@@ -52,17 +60,23 @@
       hreflang="x-default"
     />
 
+    <!-- Preconnect to font resources for performance improvement -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Google Fonts stylesheet link -->
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Canonical link for SEO -->
     <link
       rel="canonical"
       href="https://draculady.de/Pages/contact-german.html"
     />
 
+    <!-- Preloading Font Awesome stylesheet -->
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -81,6 +95,7 @@
       />
     </noscript>
 
+    <!-- Preloading Boxicons stylesheet -->
     <link
       rel="preload"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -93,18 +108,25 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
+
+    <!-- Preloading Boxicons JavaScript -->
     <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
     ></script>
+
+    <!-- Additional stylesheet for Boxicons -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
+    <!-- Preloading main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
-    <!-- Google tag (gtag.js) -->
+
+    <!-- Google Analytics tag -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
@@ -118,18 +140,25 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <!-- Link to the Schema.js file -->
+
+    <!-- Link to the Schema.js file for structured data -->
     <script src="../Scripts/schema.js" defer></script>
+
+    <!-- Page title -->
     <title id="contact-german">Kathrin Peled - Kontakt</title>
+
+    <!-- Favicon links -->
+    <link rel="icon" href="../Icons/Draculady-icon.webp" type="image/webp" />
     <link
       rel="icon"
-      href="../Icons/Draculady-icon.webp"
+      href="https://draculady.de/Icons/Draculady-icon.webp"
       type="image/webp"
     />
-    <link rel="icon" href="https://draculady.de/Icons/Draculady-icon.webp" type="image/webp" />
-    <!-- Apple Touch Icon -->
+
+    <!-- Apple Touch Icon for iOS devices -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
+
   <body>
     <header>
       <div class="container">
@@ -474,10 +503,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - Mein erstes Portfolio</p>
         <div class="logo">
-          <a
-            href="./sitemap.html"
-            target="_blank"
-            aria-label="Website's Map"
+          <a href="./sitemap.html" target="_blank" aria-label="Website's Map"
             ><img
               src="../Icons/Draculady-logo.webp"
               loading="lazy"
