--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" data-page="portfolio-english">
   <head>
+    <!-- Character set for the document -->
     <meta charset="UTF-8" />
+
+    <!-- Description for SEO purposes -->
     <meta
       name="description"
       content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Contact her for collaborations."
     />
-    <!-- <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    /> -->
+
+    <!-- Viewport settings for responsive design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Keywords for search engines -->
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
+
     <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
     <meta name="color-scheme" content="light only" />
 
+    <!-- Author of the document -->
     <meta name="author" content="Kathrin Peled Draculady" />
+
+    <!-- Instructions for web crawlers -->
     <meta name="robots" content="index, follow" />
+
     <!-- OpenGraph Meta Tags for Portfolio Page -->
     <meta property="og:title" content="Kathrin Peled - Portfolio" />
     <meta
@@ -35,6 +43,8 @@
       content="https://draculady.de/Pages/portfolio-english.html"
     />
     <meta property="og:type" content="website" />
+
+    <!-- Alternate language versions -->
     <link
       rel="alternate"
       href="https://draculady.de/Pages/portfolio-english.html"
@@ -50,18 +60,24 @@
       href="https://draculady.de/Pages/portfolio-english.html"
       hreflang="x-default"
     />
+
+    <!-- Preconnect to optimize loading of fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Canonical link for SEO -->
     <link
       rel="canonical"
       href="https://draculady.de/Pages/portfolio-english.html"
     />
 
+    <!-- Google Fonts link -->
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
 
+    <!-- Preload Font Awesome stylesheet for performance -->
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -80,6 +96,7 @@
       />
     </noscript>
 
+    <!-- Preload Boxicons stylesheet -->
     <link
       rel="preload"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -92,18 +109,27 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
+
+    <!-- Preload Boxicons script -->
     <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
+
+    <!-- Boxicons script for icons -->
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
     ></script>
+
+    <!-- Stylesheet for Boxicons -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
+    <!-- Preload custom stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
-    <!-- Google tag (gtag.js) -->
+
+    <!-- Google Analytics tracking script -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
@@ -117,19 +143,25 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <!-- Link to the Schema.js file -->
+
+    <!-- Link to the Schema.js file for structured data -->
     <script src="../Scripts/schema.js" defer></script>
+
+    <!-- Title of the document -->
     <title id="portfolio-english">Kathrin Peled - Portfolio</title>
+
+    <!-- Favicon links -->
+    <link rel="icon" href="../Icons/Draculady-icon.webp" type="image/webp" />
     <link
       rel="icon"
-      href="../Icons/Draculady-icon.webp"
+      href="https://draculady.de/Icons/Draculady-icon.webp"
       type="image/webp"
     />
-    <link rel="icon" href="https://draculady.de/Icons/Draculady-icon.webp" type="image/webp" />
 
-    <!-- Apple Touch Icon -->
+    <!-- Apple Touch Icon for mobile devices -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
+
   <body>
     <header>
       <div class="container">
