--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="de" data-page="portfolio-german">
   <head>
+    <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
+
+    <!-- Description of the webpage for SEO -->
     <meta
       name="description"
       content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
     />
-    <!-- <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    /> -->
+
+    <!-- Viewport settings for responsive design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Keywords relevant to the portfolio for SEO -->
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
+
     <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
     <meta name="color-scheme" content="light only" />
 
+    <!-- Author of the webpage -->
     <meta name="author" content="Kathrin Peled Draculady" />
+
+    <!-- Instructions for search engine indexing -->
     <meta name="robots" content="index, follow" />
+
     <!-- OpenGraph Meta Tags for Portfolio Page (German) -->
     <meta property="og:title" content="Kathrin Peled - Portfolio" />
     <meta
@@ -35,6 +43,8 @@
       content="https://draculady.de/Pages/portfolio-german.html"
     />
     <meta property="og:type" content="website" />
+
+    <!-- Alternate language links for SEO -->
     <link
       rel="alternate"
       href="https://draculady.de/Pages/portfolio-english.html"
@@ -50,17 +60,24 @@
       href="https://draculady.de/Pages/portfolio-english.html"
       hreflang="x-default"
     />
+
+    <!-- Preconnect to optimize loading of Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Google Fonts stylesheet -->
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Canonical link to avoid duplicate content issues -->
     <link
       rel="canonical"
       href="https://draculady.de/Pages/portfolio-german.html"
     />
 
+    <!-- Preload Font Awesome CSS for faster rendering -->
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -69,6 +86,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- Fallback for browsers with JavaScript disabled -->
     <noscript>
       <link
         rel="stylesheet"
@@ -79,30 +98,44 @@
       />
     </noscript>
 
+    <!-- Preload Boxicons CSS for faster rendering -->
     <link
       rel="preload"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       as="style"
       onload="this.rel='stylesheet'"
     />
+
+    <!-- Fallback for browsers with JavaScript disabled -->
     <noscript>
       <link
         rel="stylesheet"
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
+
+    <!-- Preload Boxicons JavaScript -->
     <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
+
+    <!-- Boxicons JavaScript -->
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
     ></script>
+
+    <!-- Boxicons CSS (redundant due to preload) -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
+    <!-- Preload custom stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
+
+    <!-- Custom stylesheet for the portfolio -->
     <link rel="stylesheet" href="../Styles/style.css" />
-    <!-- Google tag (gtag.js) -->
+
+    <!-- Google Analytics tag -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
@@ -113,24 +146,27 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <!-- Link to the Schema.js file -->
+
+    <!-- Link to the Schema.js file for structured data -->
     <script src="../Scripts/schema.js" defer></script>
+
+    <!-- Title of the webpage -->
     <title id="portfolio-german">Kathrin Peled - Portfolio</title>
+
+    <!-- Favicon for the portfolio -->
+    <link rel="icon" href="../Icons/Draculady-icon.webp" type="image/webp" />
     <link
       rel="icon"
-      href="../Icons/Draculady-icon.webp"
+      href="https://draculady.de/Icons/Draculady-icon.webp"
       type="image/webp"
     />
-    <link rel="icon" href="https://draculady.de/Icons/Draculady-icon.webp" type="image/webp" />
 
-    <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
+
   <body>
     <header>
       <div class="container">
