--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" data-page="resume-english">
   <head>
+    <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
+
+    <!-- Description of the page for search engines and social media -->
     <meta
       name="description"
       content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Contact her for collaborations."
     />
-    <!-- <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    /> -->
+
+    <!-- Viewport settings for responsive design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Keywords for SEO optimization -->
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
 
+    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
     <meta name="color-scheme" content="light only" />
 
+    <!-- Author of the document -->
     <meta name="author" content="Kathrin Peled Draculady" />
+
+    <!-- Directives for search engine crawlers -->
     <meta name="robots" content="index, follow" />
+
     <!-- OpenGraph Meta Tags for Resume Page -->
     <meta property="og:title" content="Kathrin Peled - Resume" />
     <meta
@@ -37,6 +44,7 @@
     />
     <meta property="og:type" content="website" />
 
+    <!-- Links for alternate language versions of the page -->
     <link
       rel="alternate"
       href="https://draculady.de/Pages/resume-english.html"
@@ -52,18 +60,24 @@
       href="https://draculady.de/Pages/resume-english.html"
       hreflang="x-default"
     />
+
+    <!-- Preconnecting to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <!-- Linking to Google Fonts stylesheets -->
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Canonical link to prevent duplicate content issues -->
     <link
       rel="canonical"
       href="https://draculady.de/Pages/resume-english.html"
     />
 
+    <!-- Preloading Font Awesome CSS for icons -->
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -72,6 +86,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- Fallback for browsers that do not support preload -->
     <noscript>
       <link
         rel="stylesheet"
@@ -82,27 +98,38 @@
       />
     </noscript>
 
+    <!-- Preloading Boxicons CSS for icons -->
     <link
       rel="preload"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       as="style"
       onload="this.rel='stylesheet'"
     />
+
+    <!-- Fallback for browsers that do not support preload -->
     <noscript>
       <link
         rel="stylesheet"
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
+
+    <!-- Preloading Boxicons JavaScript -->
     <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
+
+    <!-- Loading Boxicons JavaScript asynchronously -->
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
     ></script>
+
+    <!-- Preloading custom stylesheets -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="preload" href="../Styles/style_resume.css" as="style" />
     <link rel="stylesheet" href="../Styles/style_resume.css" />
+
+    <!-- Google Analytics tracking script -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
@@ -116,18 +143,25 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <!-- Link to the Schema.js file -->
+
+    <!-- Link to the Schema.js file for structured data -->
     <script src="../Scripts/schema.js" defer></script>
+
+    <!-- Page title -->
     <title id="resume-english">Kathrin Peled - Resume</title>
+
+    <!-- Favicon for the page -->
+    <link rel="icon" href="../Icons/Draculady-icon.webp" type="image/webp" />
     <link
       rel="icon"
-      href="../Icons/Draculady-icon.webp"
+      href="https://draculady.de/Icons/Draculady-icon.webp"
       type="image/webp"
     />
-    <link rel="icon" href="https://draculady.de/Icons/Draculady-icon.webp" type="image/webp" />
+
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
+
   <body>
     <header>
       <div class="container">
@@ -210,7 +244,11 @@
         </div>
       </div>
     </header>
-    <main class="main-resume-english" role="main" aria-label="Main Resume english Section">
+    <main
+      class="main-resume-english"
+      role="main"
+      aria-label="Main Resume english Section"
+    >
       <div class="wrapper">
         <div class="cover cover-left" aria-hidden="true"></div>
         <div class="cover cover-right" aria-hidden="true"></div>
@@ -887,10 +925,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <a
-            href="./sitemap.html"
-            target="_blank"
-            aria-label="Website's Map"
+          <a href="./sitemap.html" target="_blank" aria-label="Website's Map"
             ><img
               src="../Icons/Draculady-logo.webp"
               loading="lazy"
