--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="de" data-page="resume-mobile-german">
   <head>
+    <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
+
+    <!-- Description of the portfolio for SEO and social sharing -->
     <meta
       name="description"
       content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
     />
-    <!-- <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    /> -->
+
+    <!-- Viewport settings for responsive design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Keywords for SEO -->
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
+
+    <!-- Meta tag for color scheme preferences -->
     <meta name="color-scheme" content="light only" />
 
+    <!-- Author of the document -->
     <meta name="author" content="Kathrin Peled Draculady" />
+
+    <!-- Robots meta tag for search engine indexing -->
     <meta name="robots" content="index, follow" />
+
     <!-- OpenGraph Meta Tags for Mobile Resume Page (German) -->
     <meta property="og:title" content="Kathrin Peled - Mobiler Lebenslauf" />
     <meta
@@ -35,6 +43,8 @@
       content="https://draculady.de/Pages/resume-mobile-german.html"
     />
     <meta property="og:type" content="website" />
+
+    <!-- Alternate links for different languages -->
     <link
       rel="alternate"
       href="https://draculady.de/Pages/resume-mobile-english.html"
@@ -50,18 +60,24 @@
       href="https://draculady.de/Pages/resume-mobile-english.html"
       hreflang="x-default"
     />
+
+    <!-- Preconnect to optimize loading times for fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <!-- Link to Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Canonical link for SEO -->
     <link
       rel="canonical"
       href="https://draculady.de/Pages/resume-mobile-german.html"
     />
 
+    <!-- Preload Font Awesome stylesheet -->
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -70,7 +86,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <noscript>
+      <!-- Fallback for Font Awesome stylesheet if JavaScript is disabled -->
       <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -80,31 +98,43 @@
       />
     </noscript>
 
+    <!-- Preload Boxicons stylesheet -->
     <link
       rel="preload"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       as="style"
       onload="this.rel='stylesheet'"
     />
+
     <noscript>
+      <!-- Fallback for Boxicons stylesheet if JavaScript is disabled -->
       <link
         rel="stylesheet"
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
+
+    <!-- Preload Boxicons script -->
     <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
+
+    <!-- Load Boxicons script asynchronously -->
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
     ></script>
+
+    <!-- Preload custom stylesheets -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="preload" href="../Styles/mobileResume.css" as="style" />
     <link rel="stylesheet" href="../Styles/mobileResume.css" />
+
+    <!-- Google Tag Manager for tracking -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PCYQWXDRBG"
     ></script>
+
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -114,18 +144,26 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
+
     <!-- Link to the Schema.js file -->
     <script src="../Scripts/schema.js" defer></script>
+
+    <!-- Page title -->
     <title id="resume-mobile-german">Kathrin Peled - Lebenslauf</title>
+
+    <!-- Favicon for the website -->
+    <link rel="icon" href="../Icons/Draculady-icon.webp" type="image/webp" />
+
     <link
       rel="icon"
-      href="../Icons/Draculady-icon.webp"
+      href="https://draculady.de/Icons/Draculady-icon.webp"
       type="image/webp"
     />
-    <link rel="icon" href="https://draculady.de/Icons/Draculady-icon.webp" type="image/webp" />
+
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
+
   <body>
     <header>
       <div class="container">
@@ -818,10 +856,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <a
-            href="./sitemap.html"
-            target="_blank"
-            aria-label="Website's Map"
+          <a href="./sitemap.html" target="_blank" aria-label="Website's Map"
             ><img
               src="../Icons/Draculady-logo.webp"
               loading="lazy"
