updated languanges alternate links

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -46,12 +46,12 @@
     <link
       rel="alternate"
       href="https://draculady.de/Pages/contact-english.html"
-      hreflang="en-US"
+      hreflang="en-gb"
     />
     <link
       rel="alternate"
       href="https://draculady.de/Pages/contact-german.html"
-      hreflang="de-DE"
+      hreflang="de-de"
     />
     <link
       rel="alternate"
