--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -48,12 +48,12 @@
     <link
       rel="alternate"
       href="https://draculady.de/Pages/resume-english.html"
-      hreflang="en-US"
+      hreflang="en-gb"
     />
     <link
       rel="alternate"
       href="https://draculady.de/Pages/resume-german.html"
-      hreflang="de-DE"
+      hreflang="de-de"
     />
     <link
       rel="alternate"
