--- a/index-german.html
+++ b/index-german.html
@@ -51,12 +51,12 @@
     <link
       rel="alternate"
       href="https://draculady.de/index.html"
-      hreflang="en-US"
+      hreflang="en-gb"
     />
     <link
       rel="alternate"
       href="https://draculady.de/index-german.html"
-      hreflang="de-DE"
+      hreflang="de-de"
     />
     <link
       rel="alternate"
