--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -47,12 +47,12 @@
     <link
       rel="alternate"
       href="https://draculady.de/Pages/contact-english.html"
-      hreflang="en-US"
+      hreflang="en-gb"
     />
     <link
       rel="alternate"
       href="https://draculady.de/Pages/contact-german.html"
-      hreflang="de-DE"
+      hreflang="de-de"
     />
     <link
       rel="alternate"
