--- a/Pages/sitemap.html
+++ b/Pages/sitemap.html
@@ -113,6 +113,12 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <!-- ShareThis script -->
+    <script
+      type="text/javascript"
+      src="https://platform-api.sharethis.com/js/sharethis.js#property=67056187a6330b001a6016f1&product=sticky-share-buttons&source=platform"
+      async="async"
+    ></script>
 
     <!-- Page title -->
     <title>Site Map</title>
@@ -353,6 +359,7 @@
           </div>
         </div>
       </div>
+      <div class="sharethis-sticky-share-buttons"></div>
     </main>
     <footer>
       <div class="container">
