--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -130,6 +130,13 @@
     <!-- Link to the Schema.js file -->
     <script src="../Scripts/schema.js" defer></script>
 
+    <!-- ShareThis script -->
+    <script
+      type="text/javascript"
+      src="https://platform-api.sharethis.com/js/sharethis.js#property=67056187a6330b001a6016f1&product=sticky-share-buttons&source=platform"
+      async="async"
+    ></script>
+
     <!-- Preload and link to the main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
@@ -360,6 +367,7 @@
         </a>
       </div>
       <div class="custom-cursor"></div>
+      <div class="sharethis-sticky-share-buttons"></div>
     </main>
     <footer>
       <div class="container">
