--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -123,6 +123,13 @@
       async
     ></script>
 
+    <!-- ShareThis script -->
+    <script
+      type="text/javascript"
+      src="https://platform-api.sharethis.com/js/sharethis.js#property=67056187a6330b001a6016f1&product=sticky-share-buttons&source=platform"
+      async="async"
+    ></script>
+
     <!-- Preloading custom stylesheets -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
@@ -920,6 +927,7 @@
         </a>
       </div>
       <div class="custom-cursor"></div>
+      <div class="sharethis-sticky-share-buttons"></div>
     </main>
     <footer>
       <div class="container">
