--- a/index-german.html
+++ b/index-german.html
@@ -129,6 +129,13 @@
       rel="stylesheet"
     />
 
+    <!-- ShareThis script -->
+    <script
+      type="text/javascript"
+      src="https://platform-api.sharethis.com/js/sharethis.js#property=67056187a6330b001a6016f1&product=sticky-share-buttons&source=platform"
+      async="async"
+    ></script>
+
     <!-- Preload custom stylesheet for the page -->
     <link rel="preload" href="./Styles/style.css" as="style" />
 
@@ -806,6 +813,7 @@
         </a>
       </div>
       <div class="custom-cursor"></div>
+      <div class="sharethis-sticky-share-buttons"></div>
     </main>
     <footer>
       <div class="container">
