--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
       rel="stylesheet"
     />
 
+    <!-- ShareThis script -->
+    <script
+      type="text/javascript"
+      src="https://platform-api.sharethis.com/js/sharethis.js#property=67056187a6330b001a6016f1&product=sticky-share-buttons&source=platform"
+      async="async"
+    ></script>
+
     <!-- Preload custom stylesheet -->
     <link rel="preload" href="./Styles/style.css" as="style" />
 
@@ -776,6 +783,7 @@
         </a>
       </div>
       <div class="custom-cursor"></div>
+      <div class="sharethis-sticky-share-buttons"></div>
     </main>
     <footer>
       <div class="container">
@@ -796,6 +804,7 @@
     <script src="./Scripts/script.js" async></script>
     <script src="./Scripts/carousel.js" async></script>
     <script src="./Scripts/Cursor.js" async></script>
+
     <!-- Async or defer for external scripts -->
     <script
       async
