corrections of skills table

--- a/index-german.html
+++ b/index-german.html
@@ -773,7 +773,7 @@
             </div>
             <div class="tool">
               <div><i class="fa-brands fa-figma" aria-hidden="true"></i></div>
-              <div>Figma</div>
+              <div><p>Figma</p></div>
             </div>
           </div>
         </div>
